--- a/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.tex
+++ b/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.tex
@@ -189,7 +189,7 @@ Intervention, Volunteering},
 donations and volunteering, minority-group-attitudes, and help-received:
 evidence from a national panel study}
 \author{Joseph A. Bulbulia \and Chris G. Sibley}
-\date{2024-02-07}
+\date{2024-02-09}
 
 \begin{document}
 \maketitle
@@ -302,22 +302,15 @@ population. The functional can be stated
 
 \[f(A = a*) = \begin{cases} 4 & \text{if } A < 4  \text{ monthly religious service attendance} \\ \tilde{A} & \text{if } A \geq 4  \text{ monthly religious service attendance} \end{cases} \]
 
-The contrast \(Y|A=a\) in the contrast condition is computed the
-expected outcome when \(A\) is set to its naturally occurring value
-\(\tilde{A = a}\)
+Where \(\tilde{A}\) is is computed the expected outcome when \(A\) is
+set to its naturally occurring value such that
 
-\textbf{Comparative intervention 1: shift function as loss of any
-religious service}:
+\[\tilde{A} = A|L\]
 
-Because the gain of religion might be different from the loss of
-religion, we additionally contrast the population average outcome were
-everyone to stop attending monthly religious service verse the expected
-outcome at the natural treatment values:
+This same expression is given for the contrast condition, where
+\(Y(a)|A,L\) is given as \(Y(a)|\tilde{A}|L\)
 
-\[f(A) = 0 \] Here, we estimate outcomes in a hypothetical world in
-which no individuals attended religious service.
-
-\textbf{Comparative intervention 2: shift function of socialising at
+\textbf{Comparative intervention: the causal effects of socialising at
 least two hours per week}
 
 For qualitative purposes, we performed an additional set of analyses
@@ -349,6 +342,21 @@ to compare religious service. If religious service effects, either
 positive or negative, were to appear relatively strong against this
 backdrop, we might infer that the effects of religious service comprised
 features unique to its religious elements.
+
+\paragraph{Loss of religion and of
+socialing}\label{loss-of-religion-and-of-socialing}
+
+Because the gain of religion might be different from the loss of
+religion, we additionally contrast the population average outcome were
+everyone to stop attending monthly religious service verse the expected
+outcome at the natural treatment values:
+
+\[f(A) = 0 \]
+
+Thus we estimated outcomes for a hypothetical world in which no
+individuals attended religious service, contrasting this with expected
+outcomes for the world as it observed. We conducted a parrallel analysis
+for socialisation.
 
 \subsubsection{Identification
 assumptions}\label{identification-assumptions}
@@ -442,7 +450,7 @@ The sample consisted of respondents to NZAVS waves 2018 (baseline), 2019
 (exposure wave), and 2020 (outcome wave) (years 2018-2021) (See Appendix
 A.)
 
-\paragraph{Inclusion Criteria}\label{inclusion-criteria}
+\paragraph{Inclusion Criteria:}\label{inclusion-criteria}
 
 \begin{itemize}
 \tightlist
@@ -464,7 +472,7 @@ A.)
   2021}))
 \end{itemize}
 
-\paragraph{Exclusion Criteria}\label{exclusion-criteria}
+\subparagraph{Exluded}\label{exluded}
 
 \begin{itemize}
 \tightlist
@@ -490,12 +498,12 @@ exposure, specifically the 2020 wave of the NZAVS. The causal diagram in
 Figure~\ref{fig-outcomewide-dag} outlines our approach to confounding
 control. We align with VanderWeele \emph{et al.}
 (\citeproc{ref-vanderweele2020}{2020}) in employing a \emph{modified
-disjunctive cause criterion}, articulated as follows:
+disjunctive cause criterion}, as follows:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \item
-  \textbf{Identify all relevant factors}: initially, enumerate all
+  \textbf{Identify all relevant confounders}: initially, enumerate all
   covariates affecting either the exposure or the outcomes across five
   domains, or both. These factors encompass variables influencing
   exposure or outcome and variables that could be consequences of such
@@ -511,7 +519,7 @@ disjunctive cause criterion}, articulated as follows:
   include a proxy variable. A proxy serves as a consequent of the
   unmeasured variable.
 \item
-  \textbf{Control for previous exposure}: accounting for prior exposure
+  \textbf{Control for baseline exposure}: accounting for prior exposure
   is imperative for assessing incident exposure as opposed to prevalent
   exposure. This step enhances confounding control and aids in
   sidestepping reverse causation and other unmeasured confounders. This
@@ -542,118 +550,8 @@ for age, European ethnicity, and gender.
 
 \subsubsection{Study 2: socialising}\label{study-2-socialising}
 
-Table~\ref{tbl-transition-socialising} shows a transition matrix
-captures the movement between weekly hours socialising during the
-baseline (NZAVS time 10) wave and exposure wave (NZAVS time 11). Entries
-on the diagonal (in bold) indicate the number of individuals who stayed
-in their initial state. In contrast, the off-diagonal shows the
-transitions from the initial state (bold) to another state the following
-wave (off diagnal). Again, a cell located at the intersection of row
-\(i\) and column \(j\), where \(i \neq j\), shows the count of
-individuals moving from state \(i\) to state \(j\).
-
-\begin{longtable}[]{@{}
-  >{\centering\arraybackslash}p{(\columnwidth - 18\tabcolsep) * \real{0.0968}}
-  >{\centering\arraybackslash}p{(\columnwidth - 18\tabcolsep) * \real{0.1183}}
-  >{\centering\arraybackslash}p{(\columnwidth - 18\tabcolsep) * \real{0.1075}}
-  >{\centering\arraybackslash}p{(\columnwidth - 18\tabcolsep) * \real{0.0968}}
-  >{\centering\arraybackslash}p{(\columnwidth - 18\tabcolsep) * \real{0.0968}}
-  >{\centering\arraybackslash}p{(\columnwidth - 18\tabcolsep) * \real{0.0968}}
-  >{\centering\arraybackslash}p{(\columnwidth - 18\tabcolsep) * \real{0.0968}}
-  >{\centering\arraybackslash}p{(\columnwidth - 18\tabcolsep) * \real{0.0968}}
-  >{\centering\arraybackslash}p{(\columnwidth - 18\tabcolsep) * \real{0.0968}}
-  >{\centering\arraybackslash}p{(\columnwidth - 18\tabcolsep) * \real{0.0968}}@{}}
-\caption{Transition matrix for change in the square of hours socialing
-with community each
-week}\label{tbl-transition-socialising}\tabularnewline
-\toprule\noalign{}
-\begin{minipage}[b]{\linewidth}\centering
-From
-\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
-State 0
-\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
-State 1
-\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
-State 2
-\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
-State 3
-\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
-State 4
-\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
-State 5
-\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
-State 6
-\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
-State 7
-\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
-State 8
-\end{minipage} \\
-\midrule\noalign{}
-\endfirsthead
-\toprule\noalign{}
-\begin{minipage}[b]{\linewidth}\centering
-From
-\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
-State 0
-\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
-State 1
-\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
-State 2
-\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
-State 3
-\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
-State 4
-\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
-State 5
-\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
-State 6
-\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
-State 7
-\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
-State 8
-\end{minipage} \\
-\midrule\noalign{}
-\endhead
-\bottomrule\noalign{}
-\endlastfoot
-State 0 & \textbf{20039} & 2243 & 1192 & 221 & 25 & 12 & 7 & 3 & 6 \\
-State 1 & 2288 & \textbf{1389} & 731 & 103 & 11 & 4 & 3 & 0 & 0 \\
-State 2 & 1328 & 660 & \textbf{806} & 161 & 29 & 6 & 2 & 1 & 2 \\
-State 3 & 236 & 101 & 151 & \textbf{76} & 17 & 5 & 1 & 0 & 0 \\
-State 4 & 55 & 16 & 32 & 17 & \textbf{11} & 3 & 1 & 2 & 0 \\
-State 5 & 16 & 5 & 8 & 4 & 3 & \textbf{0} & 1 & 0 & 0 \\
-State 6 & 8 & 1 & 0 & 0 & 1 & 0 & \textbf{0} & 0 & 1 \\
-State 7 & 3 & 1 & 1 & 1 & 0 & 0 & 0 & \textbf{0} & 0 \\
-State 8 & 3 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & \textbf{1} \\
-\end{longtable}
-
-@Table~\ref{tbl-transition-socialising} presents a summary of changes in
-socialising at the threshold that we compared. When shifting to
-socialising at least 1.4 hours per week, we imagine `treating' 25,959
-cases. Again this table is for illustration, as the the shift
-intervention allows us to flexibly contrast cases without projecting the
-entire population in to one or another cell.
-
-\begin{longtable}[]{@{}ccc@{}}
-\caption{Transition matrix for change in the square of hours socialing
-with community each
-week}\label{tbl-transition-socialising-shift}\tabularnewline
-\toprule\noalign{}
-From & \textless{} 1.4 weekly hours & \textgreater= 1.4 weekly hours \\
-\midrule\noalign{}
-\endfirsthead
-\toprule\noalign{}
-From & \textless{} 1.4 weekly hours & \textgreater= 1.4 weekly hours \\
-\midrule\noalign{}
-\endhead
-\bottomrule\noalign{}
-\endlastfoot
-\textless{} 1.4 weekly hours & \textbf{25959} & 2318 \\
-\textgreater= 1.4 weekly hours & 2434 & \textbf{1347} \\
-\end{longtable}
-
 \subsubsection{Multi-dimensional indicators of
-well-being}\label{multi-dimensional-indicators-of-well-being}
+prosociality}\label{multi-dimensional-indicators-of-prosociality}
 
 We assessed well-being following VanderWeele \emph{et al.}
 (\citeproc{ref-vanderweele2020}{2020}) outcome-wide template.
@@ -795,12 +693,13 @@ merely to summarise the movements presented in
 Table~\ref{tbl-transition}. An advantage of a shift intervention is
 flexibility in imagined intervention. We do not require, for example
 that the entire population shifts to for example exactly 1 x weekly
-service attendance, and alternatively that the entire population shifts
-to exactly zero religious service attendance. Rather we compare a shift
-intervention in which people attend at least weekly perhaps attending
-more if that is their natural level attendance, against an intervention
-in which people attend at the natural level at which they are already
-attending. Hence, Table~\ref{tbl-transition-2} is for illustration.
+religious service attendance, and alternatively that the entire
+population shifts to exactly zero religious service attendance. Rather
+we compare a shift intervention in which people attend at least weekly
+perhaps attending more if that is their natural level attendance,
+against an intervention in which people attend at the natural level at
+which they are already attending. Hence, Table~\ref{tbl-transition-2} is
+for illustration.
 
 \begin{longtable}[]{@{}ccc@{}}
 \caption{Transition matrix for change in religious service attendance
@@ -845,12 +744,12 @@ z-transformed}
 \newpage{}
 
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.3793}}
-  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1839}}
-  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1034}}
-  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1034}}
-  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.0920}}
-  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1379}}@{}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.4066}}
+  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1758}}
+  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.0989}}
+  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.0989}}
+  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.0879}}
+  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1319}}@{}}
 
 \caption{\label{tbl-results-church-on-prosociality}Table of results for
 effect of religious service on charitable donations and volunteering:
@@ -875,10 +774,10 @@ E\_Val\_bound
 \endhead
 \bottomrule\noalign{}
 \endlastfoot
-Donations: weekly church \textgreater= 1 & 708.8056 & 609.4522 &
+Donations: religious service \textgreater= 1 & 708.8056 & 609.4522 &
 808.1590 & 1.5371 & 1.4826 \\
-Volunteering: weekly church \textgreater= 1 & 0.4029 & 0.2876 & 0.5182 &
-1.4132 & 1.3311 \\
+Volunteering: religious service \textgreater= 1 & 0.4029 & 0.2876 &
+0.5182 & 1.4132 & 1.3311 \\
 
 \end{longtable}
 
@@ -905,12 +804,12 @@ religious service on prejudice: z-transformed outcomes}
 \newpage{}
 
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.4632}}
-  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1684}}
-  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.0842}}
-  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.0737}}
-  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.0842}}
-  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1263}}@{}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.4848}}
+  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1616}}
+  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.0808}}
+  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.0707}}
+  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.0808}}
+  >{\raggedleft\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1212}}@{}}
 
 \caption{\label{tbl-results-church-on-prejudice}Table of results for
 effect of religious service on charitable donations and volunteering:
@@ -935,32 +834,32 @@ E\_Val\_bound
 \endhead
 \bottomrule\noalign{}
 \endlastfoot
-Warm Asians: weekly church \textgreater= 1 & 0.0972 & 0.0636 & 0.1308 &
-1.4103 & 1.3113 \\
-Warm Chinese: weekly church \textgreater= 1 & 0.0679 & 0.0384 & 0.0974 &
-1.3241 & 1.2280 \\
-Warm Immigrants: weekly church \textgreater= 1 & 0.1031 & 0.0748 &
+Warm Asians: religious service \textgreater= 1 & 0.0972 & 0.0636 &
+0.1308 & 1.4103 & 1.3113 \\
+Warm Chinese: religious service \textgreater= 1 & 0.0679 & 0.0384 &
+0.0974 & 1.3241 & 1.2280 \\
+Warm Immigrants: religious service \textgreater= 1 & 0.1031 & 0.0748 &
 0.1315 & 1.4271 & 1.3454 \\
-Warm Indians: weekly church \textgreater= 1 & 0.0857 & 0.0565 & 0.1148 &
-1.3772 & 1.2886 \\
-Warm Elderly: weekly church \textgreater= 1 & 0.1374 & 0.1098 & 0.1650 &
-1.5217 & 1.4459 \\
-Warm Maori: weekly church \textgreater= 1 & 0.1442 & 0.1164 & 0.1721 &
-1.5401 & 1.4643 \\
-Warm Mental Illness: weekly church \textgreater= 1 & 0.0730 & 0.0433 &
-0.1028 & 1.3396 & 1.2445 \\
-Warm Muslims: weekly church \textgreater= 1 & 0.0299 & -0.0002 & 0.0600
-& 1.1959 & 1.0000 \\
-Warm NZEuro: weekly church \textgreater= 1 & 0.1174 & 0.0893 & 0.1455 &
-1.4670 & 1.3881 \\
-Warm Overweight: weekly church \textgreater= 1 & 0.1448 & 0.1130 &
+Warm Indians: religious service \textgreater= 1 & 0.0857 & 0.0565 &
+0.1148 & 1.3772 & 1.2886 \\
+Warm Elderly: religious service \textgreater= 1 & 0.1374 & 0.1098 &
+0.1650 & 1.5217 & 1.4459 \\
+Warm Maori: religious service \textgreater= 1 & 0.1442 & 0.1164 & 0.1721
+& 1.5401 & 1.4643 \\
+Warm Mental Illness: religious service \textgreater= 1 & 0.0730 & 0.0433
+& 0.1028 & 1.3396 & 1.2445 \\
+Warm Muslims: religious service \textgreater= 1 & 0.0299 & -0.0002 &
+0.0600 & 1.1959 & 1.0000 \\
+Warm NZEuro: religious service \textgreater= 1 & 0.1174 & 0.0893 &
+0.1455 & 1.4670 & 1.3881 \\
+Warm Overweight: religious service \textgreater= 1 & 0.1448 & 0.1130 &
 0.1767 & 1.5417 & 1.4545 \\
-Warm Pacific: weekly church \textgreater= 1 & 0.1237 & 0.0940 & 0.1534 &
-1.4843 & 1.4011 \\
-Warm Refugees: weekly church \textgreater= 1 & 0.1405 & 0.1115 & 0.1694
-& 1.5301 & 1.4507 \\
-Perc. Religious Discrim: weekly church \textgreater= 1 & 0.3712 & 0.3347
-& 0.4077 & 2.1524 & 2.0512 \\
+Warm Pacific: religious service \textgreater= 1 & 0.1237 & 0.0940 &
+0.1534 & 1.4843 & 1.4011 \\
+Warm Refugees: religious service \textgreater= 1 & 0.1405 & 0.1115 &
+0.1694 & 1.5301 & 1.4507 \\
+Perc. Religious Discrim: religious service \textgreater= 1 & 0.3712 &
+0.3347 & 0.4077 & 2.1524 & 2.0512 \\
 
 \end{longtable}
 
@@ -1034,6 +933,118 @@ The E-value for this outcome is 1.196, indicating evidence for causality
 is weak.
 
 \newpage{}
+
+\subsubsection{Socialisation}\label{socialisation}
+
+Table~\ref{tbl-transition-socialising} shows a transition matrix
+captures the movement between weekly hours socialising during the
+baseline (NZAVS time 10) wave and exposure wave (NZAVS time 11). Entries
+on the diagonal (in bold) indicate the number of individuals who stayed
+in their initial state. In contrast, the off-diagonal shows the
+transitions from the initial state (bold) to another state the following
+wave (off diagnal). Again, a cell located at the intersection of row
+\(i\) and column \(j\), where \(i \neq j\), shows the count of
+individuals moving from state \(i\) to state \(j\).
+
+\begin{longtable}[]{@{}
+  >{\centering\arraybackslash}p{(\columnwidth - 18\tabcolsep) * \real{0.0968}}
+  >{\centering\arraybackslash}p{(\columnwidth - 18\tabcolsep) * \real{0.1183}}
+  >{\centering\arraybackslash}p{(\columnwidth - 18\tabcolsep) * \real{0.1075}}
+  >{\centering\arraybackslash}p{(\columnwidth - 18\tabcolsep) * \real{0.0968}}
+  >{\centering\arraybackslash}p{(\columnwidth - 18\tabcolsep) * \real{0.0968}}
+  >{\centering\arraybackslash}p{(\columnwidth - 18\tabcolsep) * \real{0.0968}}
+  >{\centering\arraybackslash}p{(\columnwidth - 18\tabcolsep) * \real{0.0968}}
+  >{\centering\arraybackslash}p{(\columnwidth - 18\tabcolsep) * \real{0.0968}}
+  >{\centering\arraybackslash}p{(\columnwidth - 18\tabcolsep) * \real{0.0968}}
+  >{\centering\arraybackslash}p{(\columnwidth - 18\tabcolsep) * \real{0.0968}}@{}}
+\caption{Transition matrix for change in the square of hours socialing
+with community each
+week}\label{tbl-transition-socialising}\tabularnewline
+\toprule\noalign{}
+\begin{minipage}[b]{\linewidth}\centering
+From
+\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
+State 0
+\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
+State 1
+\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
+State 2
+\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
+State 3
+\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
+State 4
+\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
+State 5
+\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
+State 6
+\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
+State 7
+\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
+State 8
+\end{minipage} \\
+\midrule\noalign{}
+\endfirsthead
+\toprule\noalign{}
+\begin{minipage}[b]{\linewidth}\centering
+From
+\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
+State 0
+\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
+State 1
+\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
+State 2
+\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
+State 3
+\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
+State 4
+\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
+State 5
+\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
+State 6
+\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
+State 7
+\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
+State 8
+\end{minipage} \\
+\midrule\noalign{}
+\endhead
+\bottomrule\noalign{}
+\endlastfoot
+State 0 & \textbf{20039} & 2243 & 1192 & 221 & 25 & 12 & 7 & 3 & 6 \\
+State 1 & 2288 & \textbf{1389} & 731 & 103 & 11 & 4 & 3 & 0 & 0 \\
+State 2 & 1328 & 660 & \textbf{806} & 161 & 29 & 6 & 2 & 1 & 2 \\
+State 3 & 236 & 101 & 151 & \textbf{76} & 17 & 5 & 1 & 0 & 0 \\
+State 4 & 55 & 16 & 32 & 17 & \textbf{11} & 3 & 1 & 2 & 0 \\
+State 5 & 16 & 5 & 8 & 4 & 3 & \textbf{0} & 1 & 0 & 0 \\
+State 6 & 8 & 1 & 0 & 0 & 1 & 0 & \textbf{0} & 0 & 1 \\
+State 7 & 3 & 1 & 1 & 1 & 0 & 0 & 0 & \textbf{0} & 0 \\
+State 8 & 3 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & \textbf{1} \\
+\end{longtable}
+
+@Table~\ref{tbl-transition-socialising} presents a summary of changes in
+socialising at the threshold that we compared. When shifting to
+socialising at least 1.4 hours per week, we imagine `treating' 25,959
+cases. Again this table is for illustration, as the the shift
+intervention allows us to flexibly contrast cases without projecting the
+entire population in to one or another cell.
+
+\begin{longtable}[]{@{}ccc@{}}
+\caption{Transition matrix for change in the square of hours socialing
+with community each
+week}\label{tbl-transition-socialising-shift}\tabularnewline
+\toprule\noalign{}
+From & \textless{} 1.4 weekly hours & \textgreater= 1.4 weekly hours \\
+\midrule\noalign{}
+\endfirsthead
+\toprule\noalign{}
+From & \textless{} 1.4 weekly hours & \textgreater= 1.4 weekly hours \\
+\midrule\noalign{}
+\endhead
+\bottomrule\noalign{}
+\endlastfoot
+\textless{} 1.4 weekly hours & \textbf{25959} & 2318 \\
+\textgreater= 1.4 weekly hours & 2434 & \textbf{1347} \\
+\end{longtable}
 
 \subsubsection{Summary of findings}\label{summary-of-findings}
 
