--- a/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.qmd
+++ b/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.qmd
@@ -100,6 +100,10 @@ loadfonts(device = "all")
 # imports
 n_participants <-  here_read("n_participants")
 
+# read standard deviations units of outcome (volunteering/donations) in 2020
+sd_donations <- here_read("sd_donations")
+sd_volunteer <- here_read("sd_volunteer")
+
 
 # verify positivity 
 #church
@@ -185,41 +189,269 @@ graph_density_of_exposure_socialising<- here_read("graph_density_of_exposure_soc
 # graph_density_of_exposure_socialising + ggtitle("Weekly hours socialing")
 #graph_density_of_exposure + ggtitle("Monthly religious service")
 
-
-# church outcomes
-
-# self reported behaviour 
+# 
+# 
+# #### USE THIS #####
+# # gain
+# tab_compare_church_prosocial_behaviour_raw<-here_read("tab_compare_church_prosocial_behaviour_raw")
 # tab_compare_church_prosocial_behaviour_z<- here_read("tab_compare_church_prosocial_behaviour_z")
+# 
+# 
+# group_tab_compare_church_prosocial_behaviour_z<- here_read("group_tab_compare_church_prosocial_behaviour_z")
+# group_tab_compare_church_prosocial_behaviour_raw<- here_read("group_tab_compare_church_prosocial_behaviour_raw")
+# 
+# #Loss
 # tab_compare_church_prosocial_behaviour_raw<- here_read("tab_compare_church_prosocial_behaviour_raw")
-# tab_compare_church_LOSS_prosocial_behaviour_z<- here_read("tab_compare_church_LOSS_prosocial_behaviour_z")
-# tab_compare_church_LOSS_prosocial_behaviour_raw<- here_read("tab_compare_church_LOSS_prosocial_behaviour_raw")
+# tab_compare_church_prosocial_behaviour_z_loss<- here_read("tab_compare_church_prosocial_behaviour_z_loss")
+# 
+# group_tab_compare_church_prosocial_behaviour_z_loss<- here_read("group_tab_compare_church_prosocial_behaviour_z_loss")
+# group_tab_compare_church_prosocial_behaviour_loss_raw <- group_tab(tab_compare_church_prosocial_behaviour_loss_raw, type = "RD")
 # 
 
 
-#### USE THIS #####
-# gain
+#### GAIN CHURCH PROSOCIAL
+
+# for reference 
 tab_compare_church_prosocial_behaviour_raw<- here_read("tab_compare_church_prosocial_behaviour_raw")
-tab_compare_church_prosocial_behaviour_z<- here_read("tab_compare_church_prosocial_behaviour_z")
-
-
-group_tab_compare_church_prosocial_behaviour_z<- here_read("group_tab_compare_church_prosocial_behaviour_z")
 group_tab_compare_church_prosocial_behaviour_raw<- here_read("group_tab_compare_church_prosocial_behaviour_raw")
 
-#Loss
-tab_compare_church_prosocial_behaviour_raw<- here_read("tab_compare_church_prosocial_behaviour_raw")
-tab_compare_church_prosocial_behaviour_z_loss<- here_read("tab_compare_church_prosocial_behaviour_z_loss")
+tab_compare_church_prosocial_behaviour_raw
+group_tab_compare_church_prosocial_behaviour_raw
 
+tab_compare_church_prosocial_behaviour_z<- here_read("tab_compare_church_prosocial_behaviour_z")
+group_tab_compare_church_prosocial_behaviour_z<- here_read("group_tab_compare_church_prosocial_behaviour_z")
+
+tab_compare_church_prosocial_behaviour_z
+group_tab_compare_church_prosocial_behaviour_z
+
+
+plot_gain_church_prosocial_z <- margot_plot(
+  group_tab_compare_church_prosocial_behaviour_z,
+  type = "RD",
+  title = "Religious service effect on reported donations and volunteering",
+  subtitle = ">= 1 x weekly religious service attendance",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+plot_gain_church_prosocial_z
+
+
+### LOSS CHURCH PROSOCIAL
+
+tab_compare_church_prosocial_behaviour_loss_raw<- here_read("tab_compare_church_prosocial_behaviour_loss_raw")
+group_tab_compare_church_prosocial_behaviour_loss_raw<- here_read("group_tab_compare_church_prosocial_behaviour_loss_raw")
+
+tab_compare_church_prosocial_behaviour_loss_raw
+group_tab_compare_church_prosocial_behaviour_loss_raw
+
+tab_compare_church_prosocial_behaviour_z_loss<- here_read("tab_compare_church_prosocial_behaviour_z_loss")
 group_tab_compare_church_prosocial_behaviour_z_loss<- here_read("group_tab_compare_church_prosocial_behaviour_z_loss")
-group_tab_compare_church_prosocial_behaviour_loss_raw <- group_tab(tab_compare_church_prosocial_behaviour_loss_raw, type = "RD")
+tab_compare_church_prosocial_behaviour_z_loss
+group_tab_compare_church_prosocial_behaviour_z_loss
+
+plot_loss_church_prosocial_z <- margot_plot(
+  group_tab_compare_church_prosocial_behaviour_z_loss,
+  type = "RD",
+  title = "Religious service effect on reported donations and volunteering",
+  subtitle = "Lose any religious service",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+
+
+# combo graph 
+plot_gain_church_prosocial_z / plot_loss_church_prosocial_z + plot_annotation(tag_levels = "A")
+
+#### GAIN CHURCH PREJUDICE
+
+tab_warm_church <- here_read("tab_warm_church")
+group_tab_warm_church <- here_read("group_tab_warm_church")
+
+tab_warm_church
+group_tab_warm_church
+
+plot_prejudice_church <- margot_plot(
+  group_tab_warm_church,
+  type = "RD",
+  title = "Religious service effect on prejudice/acceptance",
+  subtitle = ">= 1 x weekly service attendance",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+plot_prejudice_church
+
+
+
+### LOSS CHURCH PREJUDICE
+
+tab_warm_church_loss <- here_read("tab_warm_church_loss")
+group_tab_warm_church_loss <- here_read("group_tab_warm_church_loss")
+tab_warm_church_loss
+group_tab_warm_church_loss
+
+plot_prejudice_church_loss <- margot_plot(
+  group_tab_warm_church_loss,
+  type = "RD",
+  title = "Religious service effect on prejudice/acceptance",
+  subtitle = "Lose any religious service",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+
+# combo graph 
+plot_prejudice_church / plot_prejudice_church_loss + plot_annotation(tag_levels = "A")
+# 
+# ggsave(
+#   plot_prejudice_church_loss,
+#   path = here::here(here::here(push_mods, "figs")),
+#   width = 8,
+#   height = 6,
+#   units = "in",
+#   filename ="plot_prejudice_church_loss.png",
+#   device = 'png',
+#   limitsize = FALSE,
+#   dpi = 600
+# )
+
+
+#### GAIN CHURCH HELP RECEIVED
+
+tab_church_help_received <- here_read('tab_church_help_received')
+group_tab_church_help_received <- here_read("group_tab_church_help_received")
+tab_church_help_received
+group_tab_church_help_received
+
+# graph
+plot_group_tab_time_church <- margot_plot(
+  group_tab_church_help_received,
+  type = "RR",
+  title = "Religious service effect on help received",
+  subtitle = ">= 1 x weekly service attendance",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = 0,
+  x_lim_lo = 0,
+  x_lim_hi =  2
+)
+
+plot_group_tab_time_church
+
+
+ggsave(
+  plot_group_tab_time_church,
+  path = here::here(here::here(push_mods, "figs")),
+  width = 8,
+  height = 6,
+  units = "in",
+  filename = "plot_group_tab_time_church.png",
+  device = 'png',
+  limitsize = FALSE,
+  dpi = 600
+)
+
+### LOSS CHURCH HELP RECEIVED
+tab_church_help_received_loss <- here_read('tab_church_help_received_loss')
+group_tab_church_help_received_loss <- here_read("group_tab_church_help_received_loss")
+group_tab_church_help_received_loss
+tab_church_help_received_loss
+
+plot_group_tab_time_church_loss <- margot_plot(
+  group_tab_church_help_received_loss,
+  type = "RR",
+  title = "Religious service effect on help received",
+  subtitle = "Lose any religious service",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = 0,
+  x_lim_lo = 0,
+  x_lim_hi =  2
+)
+
+plot_group_tab_time_church / plot_group_tab_time_church_loss + plot_annotation(tag_levels = "A")
+
+# 
+# ggsave(
+#   plot_group_tab_time_church_loss,
+#   path = here::here(here::here(push_mods, "figs")),
+#   width = 8,
+#   height = 6,
+#   units = "in",
+#   filename = "plot_group_tab_time_church_loss.png",
+#   device = 'png',
+#   limitsize = FALSE,
+#   dpi = 600
+# )
 
 
 ### SOCIALISING GAIN PROSOCIAL
 tab_socializing_prosocial_behaviour_z<- here_read("tab_socializing_prosocial_behaviour_z")
 group_tab_socializing_prosocial_behaviour_z<- here_read("group_tab_socializing_prosocial_behaviour_z")
-
-
-tab_socializing_prosocial_behaviour_loss_z
-tab_socializing_prosocial_behaviour_loss_raw
+tab_socializing_prosocial_behaviour_z
+group_tab_socializing_prosocial_behaviour_z
 
 plot_socializing_prosocial<- margot_plot(
   group_tab_socializing_prosocial_behaviour_z,
@@ -263,7 +495,7 @@ tab_socializing_prosocial_behaviour_loss_raw<- here_read("tab_socializing_prosoc
 group_tab_socializing_prosocial_behaviour_loss_raw<- here_read("group_tab_socializing_prosocial_behaviour_loss_raw")
 tab_socializing_prosocial_behaviour_loss_raw
 
-### LOSS SOCIALISING  Z
+### LOSS SOCIALISING  prosocial Z
 
 tab_socializing_prosocial_behaviour_loss_z<- here_read("tab_socializing_prosocial_behaviour_loss_z")
 group_tab_socializing_prosocial_behaviour_loss_z<- here_read("group_tab_socializing_prosocial_behaviour_loss_z")
@@ -288,408 +520,8 @@ plot_socializing_prosocial_loss_z<- margot_plot(
   x_lim_hi =  .5
 )
 
-plot_socializing_prosocial_loss_z + plot_socializing_prosocial
+plot_socializing_prosocial/ plot_socializing_prosocial_loss_z +  plot_annotation(tag_levels = "A")
 
-
-
-### SOCIALISING GAIN PREJUDICE
-# ALERT: GRAPHS WARMTH SOCIALISING ----------------------------------------
-tab_warm_socialising<- here_read("tab_warm_socialising")
-group_tab_warm_warm_socialising <- here_read("group_tab_warm_socialising")
-tab_warm_socialising
-group_tab_warm_warm_socialising
-plot_warm_socialising <- margot_plot(
-  group_tab_warm_warm_socialising,
-  type = "RD",
-  title = "Socialing effect on prejudice/acceptance",
-  subtitle = ">= 1.4  x weekly hours socialising",
-  xlab = "",
-  ylab = "",
-  estimate_scale = 1,
-  base_size = 8,
-  text_size = 2.5,
-  point_size = .5,
-  title_size = 12,
-  subtitle_size = 11,
-  legend_text_size = 8,
-  legend_title_size = 10,
-  x_offset = -1,
-  x_lim_lo = -1,
-  x_lim_hi =  .5
-)
-
-plot_warm_socialising
-
-ggsave(
-  plot_warm_socialising,
-  path = here::here(here::here(push_mods, "figs")),
-  width = 8,
-  height = 6,
-  units = "in",
-  filename = "plot_warm_socialising.png",
-  device = 'png',
-  limitsize = FALSE,
-  dpi = 600
-)
-
-
-
-
-
-### SOCIALISING LOSS PREJUDICE
-
-
-tab_warm_socialising_loss<- here_read("tab_warm_socialising_loss")
-group_tab_warm_socialising_loss<- here_read("group_tab_warm_socialising_loss")
-plot_warm_socialising_loss <- margot_plot(
-  group_tab_warm_socialising_loss,
-  type = "RD",
-  title = "Socialing effect on prejudice/acceptance",
-  subtitle = "Any socialising lost",
-  xlab = "",
-  ylab = "",
-  estimate_scale = 1,
-  base_size = 8,
-  text_size = 2.5,
-  point_size = .5,
-  title_size = 12,
-  subtitle_size = 11,
-  legend_text_size = 8,
-  legend_title_size = 10,
-  x_offset = -1,
-  x_lim_lo = -1,
-  x_lim_hi =  .5
-)
-
-plot_warm_socialising_loss
-
-ggsave(
-  plot_warm_socialising_loss,
-  path = here::here(here::here(push_mods, "figs")),
-  width = 8,
-  height = 6,
-  units = "in",
-  filename = "plot_warm_socialising_loss.png",
-  device = 'png',
-  limitsize = FALSE,
-  dpi = 600
-)
-plot_warm_socialising + plot_warm_socialising_loss
-
-
-### SOCIALISING GAIN HELP RECEIVED
-
-
-
-### SOCIALISING LOSS HELP RECEIVED
-
-
-
-
-#### END USE THIS #####
-
-#Loss
-# tab_compare_church_prosocial_behaviour_raw<- here_read("tab_compare_church_prosocial_behaviour_raw")
-# tab_compare_church_prosocial_behaviour_z_loss<- here_read("tab_compare_church_prosocial_behaviour_z_loss")
-# group_tab_compare_church_prosocial_behaviour_z_loss<- here_read("group_tab_compare_church_prosocial_behaviour_z_loss")
-# group_tab_compare_church_prosocial_behaviour_loss_raw <- group_tab(tab_compare_church_prosocial_behaviour_loss_raw, type = "RD")
-# 
-# group_tab_compare_church_prosocial_behaviour_raw<- here_read("group_tab_compare_church_prosocial_behaviour_raw")
-# group_tab_compare_church_LOSS_prosocial_behaviour_z<- here_read("group_tab_compare_church_LOSS_prosocial_behaviour_z")
-# group_tab_compare_church_prosocial_behaviour_z<- here_read("group_tab_compare_church_prosocial_behaviour_z")
-# group_tab_compare_church_LOSS_prosocial_behaviour_raw<- here_read("group_tab_compare_church_LOSS_prosocial_behaviour_raw")
-
-# RESULT OBJECTS 
-# group_tab_compare_church_prosocial_behaviour_z
-# group_tab_compare_church_prosocial_behaviour_raw
-# group_tab_compare_church_LOSS_prosocial_behaviour_z
-# group_tab_compare_church_LOSS_prosocial_behaviour_raw
-
-
-plot_church_prosocial <- margot_plot(
-  group_tab_compare_church_prosocial_behaviour_z,
-  type = "RD",
-  title = "Religious service effect on reported donations and volunteering",
-  subtitle = ">= 1 x weekly religious service attendance",
-  xlab = "",
-  ylab = "",
-  estimate_scale = 1,
-  base_size = 8,
-  text_size = 2.5,
-  point_size = .5,
-  title_size = 12,
-  subtitle_size = 11,
-  legend_text_size = 8,
-  legend_title_size = 10,
-  x_offset = -1,
-  x_lim_lo = -1,
-  x_lim_hi =  .5
-)
-
-plot_church_prosocial
-
-
-plot_church_LOSS_prosocial <- margot_plot(
-  group_tab_compare_church_prosocial_behaviour_z_loss,
-  type = "RD",
-  title = "Religious service loss on reported donations and volunteering",
-  subtitle = "Lose any service attendance",
-  xlab = "",
-  ylab = "",
-  estimate_scale = 1,
-  base_size = 8,
-  text_size = 2.5,
-  point_size = .5,
-  title_size = 12,
-  subtitle_size = 11,
-  legend_text_size = 8,
-  legend_title_size = 10,
-  x_offset = -1,
-  x_lim_lo = -1,
-  x_lim_hi =  .5
-)
-
-plot_church_LOSS_prosocial
-
-# prejudice
-# results
-group_tab_compare_church_prejudice_z <- here_read("group_tab_warm_church")
-tab_compare_church_prejudice_z  <- here_read("tab_warm_church")
-
-
-plot_church_prejudice  <- margot_plot(
-  group_tab_compare_church_prejudice_z,
-  type = "RD",
-  title = "Religious service effect on prejudice/acceptance",
-  subtitle = ">= 1 x weekly religious service attendance",
-  xlab = "",
-  ylab = "",
-  estimate_scale = 1,
-  base_size = 8,
-  text_size = 2.5,
-  point_size = .5,
-  title_size = 12,
-  subtitle_size = 11,
-  legend_text_size = 8,
-  legend_title_size = 10,
-  x_offset = -1,
-  x_lim_lo = -1,
-  x_lim_hi =  .5
-)
-
-plot_church_prejudice
-# 
-# ggsave(
-#   plot_prejudice_church,
-#   path = here::here(here::here(push_mods, "figs")),
-#   width = 8,
-#   height = 6,
-#   units = "in",
-#   filename = "plot_prejudice_church.png",
-#   device = 'png',
-#   limitsize = FALSE,
-#   dpi = 600
-# )
-
-
-
-## loss church on prosocial behaviour
-tab_compare_church_prosocial_behaviour_z_loss<- here_read("tab_compare_church_prosocial_behaviour_z_loss")
-tab_compare_church_prosocial_behaviour_loss_raw<- here_read("tab_compare_church_prosocial_behaviour_loss_raw")
-group_tab_compare_church_prosocial_behaviour_loss_raw<- here_read("group_tab_compare_church_prosocial_behaviour_loss_raw")
-group_tab_compare_church_prosocial_behaviour_z_loss<- here_read("group_tab_compare_church_prosocial_behaviour_z_loss")
-
-
-plot_church_prosocial_loss <- margot_plot(
-  group_tab_compare_church_prosocial_behaviour_z_loss,
-  type = "RD",
-  title = "Religious service effect on reported donations and volunteering",
-  subtitle = "Lose any religious service",
-  xlab = "",
-  ylab = "",
-  estimate_scale = 1,
-  base_size = 8,
-  text_size = 2.5,
-  point_size = .5,
-  title_size = 12,
-  subtitle_size = 11,
-  legend_text_size = 8,
-  legend_title_size = 10,
-  x_offset = -1,
-  x_lim_lo = -1,
-  x_lim_hi =  .5
-)
-
-plot_church_prosocial_loss
-# 
-ggsave(
-  plot_church_prosocial_loss,
-  path = here::here(here::here(push_mods, "figs")),
-  width = 8,
-  height = 6,
-  units = "in",
-  filename = "plot_church_prosocial_loss.png",
-  device = 'png',
-  limitsize = FALSE,
-  dpi = 600
-)
-
-
-
-plot_charity_church_z_loss <- margot_plot(
-  group_tab_compare_church_prosocial_behaviour_z_loss,
-  type = "RD",
-  title = "Religious service effect on reported donations and volunteering",
-  subtitle = "Lose any religious service",
-  xlab = "",
-  ylab = "",
-  estimate_scale = 1,
-  base_size = 8,
-  text_size = 2.5,
-  point_size = .5,
-  title_size = 12,
-  subtitle_size = 11,
-  legend_text_size = 8,
-  legend_title_size = 10,
-  x_offset = -1,
-  x_lim_lo = -1,
-  x_lim_hi =  .5
-)
-
-plot_charity_church_z_loss
-# 
-ggsave(
-  plot_charity_church_z_loss,
-  path = here::here(here::here(push_mods, "figs")),
-  width = 8,
-  height = 6,
-  units = "in",
-  filename = "plot_charity_church_z_loss.png",
-  device = 'png',
-  limitsize = FALSE,
-  dpi = 600
-)
-
-
-
-
-
-## LOSE CHURCH ON PREJUDICE
-tab_warm_church_loss <- here_read("tab_warm_church_loss")
-tab_warm_church_loss
-group_tab_warm_church_loss <- here_read("group_tab_warm_church_loss")
-group_tab_warm_church_loss
-
-
-group_tab_warm_church_loss <- here_read("group_tab_warm_church_loss")
-
-plot_prejudice_church_loss <- margot_plot(
-  group_tab_warm_church_loss,
-  type = "RD",
-  title = "Religious service effect on prejudice/acceptance",
-  subtitle = "Lose any religious service",
-  xlab = "",
-  ylab = "",
-  estimate_scale = 1,
-  base_size = 8,
-  text_size = 2.5,
-  point_size = .5,
-  title_size = 12,
-  subtitle_size = 11,
-  legend_text_size = 8,
-  legend_title_size = 10,
-  x_offset = -1,
-  x_lim_lo = -1,
-  x_lim_hi =  .5
-)
-
-plot_prejudice_church_loss
-
-ggsave(
-  plot_prejudice_church_loss,
-  path = here::here(here::here(push_mods, "figs")),
-  width = 8,
-  height = 6,
-  units = "in",
-  filename ="plot_prejudice_church_loss.png",
-  device = 'png',
-  limitsize = FALSE,
-  dpi = 600
-)
-
-
-# HELP RECEIVED
-tab_church_help_received <- here_read('tab_church_help_received')
-group_tab_church_help_received <- here_read("group_tab_church_help_received")
-
-# results
-# tab_church_help_received
-# group_tab_church_help_received
-
-
-
-plot_church_help_received <- margot_plot(
-  group_tab_church_help_received,
-  type = "RR",
-  title = "Religious service effect on help received",
-  subtitle = ">= 1 x weekly religious service attendance",
-  xlab = "",
-  ylab = "",
-  estimate_scale = 1,
-  base_size = 8,
-  text_size = 2.5,
-  point_size = .5,
-  title_size = 12,
-  subtitle_size = 11,
-  legend_text_size = 8,
-  legend_title_size = 10,
-  x_offset = 0,
-  x_lim_lo = 0,
-  x_lim_hi =  2
-)
-
-#plot_church_help_received
-
-
-### Loss religious service on help received
-# graph
-tab_church_help_received_loss <- here_read('tab_church_help_received_loss')
-group_tab_church_help_received_loss <- here_read("group_tab_church_help_received_loss")
-
-plot_group_tab_time_church_loss <- margot_plot(
-  group_tab_church_help_received_loss,
-  type = "RR",
-  title = "Religious service effect on help received",
-  subtitle = "Lose any religious service",
-  xlab = "",
-  ylab = "",
-  estimate_scale = 1,
-  base_size = 8,
-  text_size = 2.5,
-  point_size = .5,
-  title_size = 12,
-  subtitle_size = 11,
-  legend_text_size = 8,
-  legend_title_size = 10,
-  x_offset = 0,
-  x_lim_lo = 0,
-  x_lim_hi =  2
-)
-
-plot_group_tab_time_church_loss
-
-
-ggsave(
-  plot_group_tab_time_church_loss,
-  path = here::here(here::here(push_mods, "figs")),
-  width = 8,
-  height = 6,
-  units = "in",
-  filename = "plot_group_tab_time_church_loss.png",
-  device = 'png',
-  limitsize = FALSE,
-  dpi = 600
-)
 
 
 ######################
@@ -705,12 +537,6 @@ group_tab_socializing_prosocial_behaviour_raw<- here_read("group_tab_socializing
 
 tab_socializing_prosocial_behaviour_z<- here_read("tab_socializing_prosocial_behaviour_z")
 group_tab_socializing_prosocial_behaviour_z<- here_read("group_tab_socializing_prosocial_behaviour_z")
-
-
-# Results
-# group_tab_socializing_prosocial_behaviour_z
-# tab_socializing_prosocial_behaviour_raw
-# group_tab_socializing_prosocial_behaviour_raw
 
 
 plot_socializing_prosocial<- margot_plot(
@@ -733,20 +559,14 @@ plot_socializing_prosocial<- margot_plot(
   x_lim_hi =  .5
 )
 
-# plot_socializing_prosocial
+plot_socializing_prosocial
 
 
 
 
 ## Prejudice
 tab_socialising_prejudice_z  <- here_read("tab_warm_socialising")
-
-
 group_table_socialising_prejudice_z  <- here_read("group_tab_warm_socialising")
-
-# Results
-# group_table_socialising_prejudice_z
-# tab_socialising_prejudice_z
 
 plot_warm_socialising <- margot_plot(
   group_table_socialising_prejudice_z,
@@ -768,12 +588,13 @@ plot_warm_socialising <- margot_plot(
   x_lim_hi =  .5
 )
 
-# plot_warm_socialising
+plot_warm_socialising
 
 tab_warm_socialising_loss<- here_read("tab_warm_socialising_loss")
 group_tab_warm_socialising_loss<- here_read("group_tab_warm_socialising_loss")
+
 plot_warm_socialising_loss <- margot_plot(
-  group_tab_warm_warm_socialising_loss,
+  group_tab_warm_socialising_loss,
   type = "RD",
   title = "Socialing effect on prejudice/acceptance",
   subtitle = "Any socialising lost",
@@ -793,19 +614,18 @@ plot_warm_socialising_loss <- margot_plot(
 )
 
 plot_warm_socialising_loss
-
-ggsave(
-  plot_warm_socialising_loss,
-  path = here::here(here::here(push_mods, "figs")),
-  width = 8,
-  height = 6,
-  units = "in",
-  filename = "plot_warm_socialising_loss.png",
-  device = 'png',
-  limitsize = FALSE,
-  dpi = 600
-)
-
+# 
+# ggsave(
+#   plot_warm_socialising_loss,
+#   path = here::here(here::here(push_mods, "figs")),
+#   width = 8,
+#   height = 6,
+#   units = "in",
+#   filename = "plot_warm_socialising_loss.png",
+#   device = 'png',
+#   limitsize = FALSE,
+#   dpi = 600
+# )
 
 ### LOSS SOCIALISING PREJUDICE
 tab_warm_socialising_loss<- here_read("tab_warm_socialising_loss")
@@ -832,30 +652,28 @@ plot_warm_socialising_loss <- margot_plot(
 
 plot_warm_socialising_loss
 
-ggsave(
-  plot_warm_socialising_loss,
-  path = here::here(here::here(push_mods, "figs")),
-  width = 8,
-  height = 6,
-  units = "in",
-  filename = "plot_warm_socialising_loss.png",
-  device = 'png',
-  limitsize = FALSE,
-  dpi = 600
-)
-
-# SOCIALISING HELP RECEIVED
-
-tab_socialising_help_received<- here_read("tab_socialising_help_received")
+# ggsave(
+#   plot_warm_socialising_loss,
+#   path = here::here(here::here(push_mods, "figs")),
+#   width = 8,
+#   height = 6,
+#   units = "in",
+#   filename = "plot_warm_socialising_loss.png",
+#   device = 'png',
+#   limitsize = FALSE,
+#   dpi = 600
+# )
 
 
+plot_warm_socialising +  plot_warm_socialising_loss /  plot_annotation(tag_levels = "A")
+
+
+
+# GAIN SOCIALISING HELP RECEIVED
+tab_socialising_help_received <- here_read("tab_socialising_help_received")
 group_tab_socialising_help_received <- here_read("group_tab_socialising_help_received")
 
-## results
-# group_tab_socialising_help_received
-# tab_socialising_help_received
-
-plot_socialising_help_recieved <- margot_plot(
+plot_socialising_gain_help_received<- margot_plot(
   group_tab_socialising_help_received,
   type = "RR",
   title = "Socialising effect on help recieved",
@@ -875,113 +693,27 @@ plot_socialising_help_recieved <- margot_plot(
   x_lim_hi =  2
 )
 
-### COMPARE LOSSES
-
-# table loss socialising prosocial
-tab_contrast_socialising_on_donate_loss_raw<- here_read("tab_contrast_socialising_on_donate_loss_raw")
-
-# table loss socialising
-tab_contrast_socialising_on_donate_loss_raw
-
-# gains were for CHURCH
-tab_compare_church_prosocial_behaviour_raw <- here_read("tab_compare_church_prosocial_behaviour_raw")
-tab_compare_church_prosocial_behaviour_raw
-
-# gains prosociality
-tab_socializing_prosocial_behaviour_raw<- here_read("tab_socializing_prosocial_behaviour_raw")
-tab_socializing_prosocial_behaviour_raw
+plot_socialising_gain_help_received
+# ggsave(
+#   plot_socialising_gain_help_received,
+#   path = here::here(here::here(push_mods, "figs")),
+#   width = 8,
+#   height = 6,
+#   units = "in",
+#   filename = "plot_socialising_gain_help_received.png",
+#   device = 'png',
+#   limitsize = FALSE,
+#   dpi = 600
+# )
 
 
-# USE THIS
-tab_socializing_prosocial_behaviour_z<- here_read("tab_socializing_prosocial_behaviour_z")
-group_tab_socializing_prosocial_behaviour_z<- here_read("group_tab_socializing_prosocial_behaviour_z")
+## LOSS SOCIALISING HELP RECIEVED
 
-plot_socializing_prosocial<- margot_plot(
-  group_tab_socializing_prosocial_behaviour_z,
-  type = "RD",
-  title = "Socialising effect on charity",
-  subtitle = ">= 1.4  x weekly hours socialising",
-  xlab = "",
-  ylab = "",
-  estimate_scale = 1,
-  base_size = 8,
-  text_size = 2.5,
-  point_size = .5,
-  title_size = 12,
-  subtitle_size = 11,
-  legend_text_size = 8,
-  legend_title_size = 10,
-  x_offset = -1,
-  x_lim_lo = -1,
-  x_lim_hi =  .5
-)
-
-plot_socializing_prosocial
-
-
-ggsave(
-  plot_behaviour_socialising,
-  path = here::here(here::here(push_mods, "figs")),
-  width = 8,
-  height = 6,
-  units = "in",
-  filename = "plot_charity_time.png",
-  device = 'png',
-  limitsize = FALSE,
-  dpi = 600
-)
-
-
-### LOSS SOCIALISING ON HELP RECEIVED
-
-# loss
-
-tab_socializing_prosocial_behaviour_loss_z<- here_read("tab_socializing_prosocial_behaviour_loss_z")
-group_tab_socializing_prosocial_behaviour_loss_z<- here_read("group_tab_socializing_prosocial_behaviour_loss_z")
-
-plot_socializing_prosocial_loss_z<- margot_plot(
-  group_tab_socializing_prosocial_behaviour_loss_z,
-  type = "RD",
-  title = "Socialising effect on charity",
-  subtitle = "any community socialising lost",
-  xlab = "",
-  ylab = "",
-  estimate_scale = 1,
-  base_size = 8,
-  text_size = 2.5,
-  point_size = .5,
-  title_size = 12,
-  subtitle_size = 11,
-  legend_text_size = 8,
-  legend_title_size = 10,
-  x_offset = -1,
-  x_lim_lo = -1,
-  x_lim_hi =  .5
-)
-
-plot_socializing_prosocial_loss_z
-
-
-ggsave(
-  plot_behaviour_socialising_loss_z,
-  path = here::here(here::here(push_mods, "figs")),
-  width = 8,
-  height = 6,
-  units = "in",
-  filename = "plot_charity_time_loss_z.png",
-  device = 'png',
-  limitsize = FALSE,
-  dpi = 600
-)
-
-
-
-### SOCIALISING LOSS HELP RECEIVED MODELS 
 
 tab_socialising_help_received_loss<- here_read("tab_socialising_help_received_loss")
 group_tab_socialising_help_received_loss <- here_read("group_tab_socialising_help_received_loss")
 
-plot_help_time_loss <- margot_plot(
+plot_socialising_loss_help_received <- margot_plot(
   group_tab_socialising_help_received_loss,
   type = "RR",
   title = "Socialising effect on help recieved",
@@ -1001,18 +733,22 @@ plot_help_time_loss <- margot_plot(
   x_lim_hi =  2
 )
 
-plot_help_time_loss
-ggsave(
-  plot_help_time_loss,
-  path = here::here(here::here(push_mods, "figs")),
-  width = 8,
-  height = 6,
-  units = "in",
-  filename = "plot_help_time_loss.png",
-  device = 'png',
-  limitsize = FALSE,
-  dpi = 600
-)
+plot_socialising_loss_help_received
+# ggsave(
+#   plot_socialising_loss_help_received,
+#   path = here::here(here::here(push_mods, "figs")),
+#   width = 8,
+#   height = 6,
+#   units = "in",
+#   filename = "plot_socialising_loss_help_received.png",
+#   device = 'png',
+#   limitsize = FALSE,
+#   dpi = 600
+# )
+
+
+# hours community
+plot_socialising_gain_help_received /  plot_socialising_loss_help_received + plot_annotation(tag_levels = "A")
 
 
 # plot_socialising_help_recieved
@@ -1329,6 +1065,8 @@ We assessed well-being following @vanderweele2020 outcome-wide template. Outcome
 #| include: true
 #| echo: false
 #| fig-height: 6
+#| fig-width: 8
+
 n_participants
 
 #saveRDS(group_tab_health, here::here(push_mods, "group_tab_health")) # save on first anlaysis, no need after
@@ -1339,10 +1077,10 @@ title_church = "Weekly Religious Serive N = 32058"
 # set title
 subtitle_health = "Charity and Volunteering"
 
-plot_church_prosocial <- margot_plot(
+plot_gain_church_prosocial_z <- margot_plot(
   group_tab_compare_church_prosocial_behaviour_z,
   type = "RD",
-  title = "Religious service effect on reported donations and volunteering: z-transformed outcomes",
+  title = "Religious service effect on reported donations and volunteering",
   subtitle = ">= 1 x weekly religious service attendance",
   xlab = "",
   ylab = "",
@@ -1359,9 +1097,11 @@ plot_church_prosocial <- margot_plot(
   x_lim_hi =  .5
 )
 
+# #check
+# plot_gain_church_prosocial_z
 
-#check
-plot_church_prosocial
+plot_gain_church_prosocial_z / plot_loss_church_prosocial_z + plot_annotation(tag_levels = "A")
+
 # 
 # ggsave(
 #   group_plot_ate_health_cats,
@@ -1413,7 +1153,7 @@ title_church = "Weekly Religious Service N = 32058"
 subtitle_health = "Prejudice/Acceptance"
 
 plot_church_prejudice<- margot_plot(
-  group_tab_compare_church_prejudice_z,
+  group_tab_warm_church,
   type = "RD",
   title = "Religious service effect on minority-group attitudes",
   subtitle = ">= 1 x weekly religious service attendance",
@@ -1458,10 +1198,10 @@ plot_church_prejudice
 #| include: true
 #| echo: false
 
-tab_compare_church_prejudice_z |> 
+tab_warm_church |> 
   kbl(format="markdown")
 
-#interpret_table(group_tab_compare_church_prejudice_z, "causal_difference", "PATE")
+#interpret_table(group_tab_warm_church, "causal_difference", "PATE")
 
 ```
 
