Added standard causal contrasts

--- a/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.qmd
+++ b/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Causal effect of religious service attendance on charitable donations and volunteering, minority-group-attitudes, and help-received: evidence from a national panel study"
 abstract: |
-  This study employs panel data from the New Zealand Attitudes and Values Study, a longitudinal survey of 30,000 New Zealanders, to examine the causal impact of religious service attendance on prosocial behaviors across three dimensions: charitable donations and volunteering, attitudes towards minority groups ("warmth"), and help received from others—a novel metric. Our analysis distinguishes between the effects of initiating weekly religious service attendance for non-attendees and ceasing any religious participation. Additionally, we conduct a parallel comparison with a general shifts in community social engagement to discern the unique contributions of religious service to prosociality.  **Charitable Donations and Volunteering**:  Findings indicate that regular attendance at religious services increases annual charitable donations by approximately $700 per adult, without a corresponding effect from general social engagement. Both activities, however, similarly elevate volunteering rates. **Prejudice Reduction**: Attendance at religious services enhances warmth towards all social groupsl. In contrast, general social engagement only reliably improves attitudes towards Māori, New Zealand's largest minority group. **Help Received**: Engagement in regular religious services leads to increased community support, but not too greater support from family and friends. Conversely, general social engagement boosts support from family and friends but not from the community. The discontinuation of any religious service attendance results in reduced volunteering but does not affect charitable donations, suggesting that religious service may foster enduring charitable habits. In summary, acquiring religious service attendance enhances charitable giving and reduces prejudice more effectively than mere social engagement, with the cessation of religious services demonstrating distinct outcomes. This supports theories proposing that religious involvement cultivates charitable dispositions.
+  This outcome-wide study employs panel data from the New Zealand Attitudes and Values Study to examine the causal effect of religious service attendance on prosocial behaviors across three dimensions: (1) charitable donations and volunteering; (2) attitudes towards minority groups ("warmth"); and (3) help received from others —- a novel metric for group-induced cooperation that avoids self-presentation bias (*N* =32.058, years = 2018-2021). To better understand the effects religious community participant we conduct a parallel comparison invetigation the causal effects of greater community engagement; Finally we model the population-wide effects of loss of religious activity and in a separate analysis of community engagelment. **Charitable Donations and Volunteering**:  Findings indicate that regular attendance at religious services increases annual charitable donations by an average of approximately $700 per adult across the population. We do not observed such an effect from greater community engagement. Both religious service and general community engagement, however, similarly elevate volunteering rates. **Prejudice Reduction**: Attendance at religious services enhances warmth towards all social groups. In contrast, general social engagement only reliably improves attitudes towards Māori, New Zealand's largest minority group. **Help Received**: Engagement in regular religious services leads to increased community support and friends, but not to greater support from family. Conversely, general social engagement boosts support from family and friends but not from the community. Finally, discontinuation of any religious service attendance results in reduced volunteering but does not affect charitable donations, suggesting that religious service may foster enduring charitable habits. In summary, acquiring religious service attendance enhances charitable giving and reduces prejudice more effectively than mere social engagement, with the cessation of religious services demonstrating distinct outcomes. This supports theories proposing that religious involvement cultivates charitable dispositions.
 author: 
   - name: Joseph A. Bulbulia
     affiliation: Victoria University of Wellington, New Zealand
@@ -63,13 +63,13 @@ source("/Users/joseph/GIT/templates/functions/libs2.R")
 source("/Users/joseph/GIT/templates/functions/funs.R")
 
 # ALERT: UNCOMMENT THIS AND DOWNLOAD THE FUNCTIONS FROM JB's GITHUB
-source(
-  "https://raw.githubusercontent.com/go-bayes/templates/main/functions/experimental_funs.R"
-)
+# source(
+#   "https://raw.githubusercontent.com/go-bayes/templates/main/functions/experimental_funs.R"
+# )
 
-source(
-  "https://raw.githubusercontent.com/go-bayes/templates/main/functions/experimental_funs.R"
-)
+# source(
+#   "https://raw.githubusercontent.com/go-bayes/templates/main/functions/experimental_funs.R"
+# )
 
 
 ## WARNING SET THIS PATH TO YOUR DATA ON YOUR SECURE MACHINE. 
@@ -99,7 +99,7 @@ loadfonts(device = "all")
 ## Read in data from analysis 
 # imports
 n_participants <-  here_read("n_participants")
-
+n_participants
 # read standard deviations units of outcome (volunteering/donations) in 2020
 sd_donations <- here_read("sd_donations")
 sd_volunteer <- here_read("sd_volunteer")
@@ -734,68 +734,190 @@ plot_socialising_loss_help_received <- margot_plot(
 )
 
 plot_socialising_loss_help_received
-# ggsave(
-#   plot_socialising_loss_help_received,
-#   path = here::here(here::here(push_mods, "figs")),
-#   width = 8,
-#   height = 6,
-#   units = "in",
-#   filename = "plot_socialising_loss_help_received.png",
-#   device = 'png',
-#   limitsize = FALSE,
-#   dpi = 600
-# )
+
+############### STRONG INTERVENTIONS #######################
 
 
-# hours community
-plot_socialising_gain_help_received /  plot_socialising_loss_help_received + plot_annotation(tag_levels = "A")
+##############################################
+### STRONG CONTRASTS  CHURCH ################
+################################################
+
+tab_strong_church_gain_prosocial<- here_read("tab_strong_church_gain_prosocial")
+group_tab_strong_church_gain_prosocial<- here_read("group_tab_strong_church_gain_prosocial")
+
+plot_gain_church_prosocial_strong <- margot_plot(
+  group_tab_strong_church_gain_prosocial,
+  type = "RD",
+  title = "Religious service effect on reported donations and volunteering",
+  subtitle = "Weekly vs. No Religious Service",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+plot_gain_church_prosocial_strong
+dev.off()
+
+## WARM 
+tab_warm_church_strong<- here_read("tab_warm_church_strong")
+group_tab_warm_church_strong <- here_read("group_tab_warm_church_strong")
 
 
-# plot_socialising_help_recieved
+plot_prejudice_church_strong <- margot_plot(
+  group_tab_warm_church_strong,
+  type = "RD",
+  title = "Religious service effect on prejudice/acceptance",
+  subtitle = "Weekly vs. None",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+plot_prejudice_church_strong
+
+ggsave(
+  plot_prejudice_church_strong,
+  path = here::here(here::here(push_mods, "figs")),
+  width = 8,
+  height = 6,
+  units = "in",
+  filename ="plot_prejudice_church_strong.png",
+  device = 'png',
+  limitsize = FALSE,
+  dpi = 600
+)
 
 
 
-
-#f <- function(data, trt){
-#   ifelse( data[[trt]] <=4, 4,  data[[trt]] )
-# }
-
-#f <- function(data, trt){
-#   ifelse( data[[trt]] <=4, 4,  data[[trt]] )
-# }
-
-# shift function for socialing: # simple shift,2 hours per week. 
-# f_s <- function(data, trt){
-#   ifelse( data[[trt]] <=2, 2,  data[[trt]] )
-# }
+# graph strong church help received
+tab_church_help_received_strong <- here_read('tab_church_help_received_strong')
+group_tab_church_help_received_strong <- here_read("group_tab_church_help_received_strong")
 
 
-# shift lose all religion
-# > f_1
-# function(data, trt){
-#   ifelse( data[[trt]] > 0, 0,  data[[trt]] )
-# }
+plot_group_tab_time_church_strong <- margot_plot(
+  group_tab_church_help_received_strong,
+  type = "RR",
+  title = "Religious service effect on help received_strong",
+  subtitle = "Weekly vs. None",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = 0,
+  x_lim_lo = 0,
+  x_lim_hi =  2
+)
+
+plot_group_tab_time_church_strong
+
+
+#  SOCIALISING PROSOCIAL STRONG 
+
+# for reference
+tab_socializing_prosocial_behaviour_loss_raw_strong<- here_read("tab_socializing_prosocial_behaviour_loss_raw_strong")
+group_tab_socializing_prosocial_behaviour_loss_raw_strong<- here_read("group_tab_socializing_prosocial_behaviour_loss_raw_strong")
+
+# view
+tab_socializing_prosocial_behaviour_loss_raw_strong
+group_tab_socializing_prosocial_behaviour_loss_raw_strong
+
+tab_socializing_prosocial_behaviour_loss_z_strong<- here_read("tab_socializing_prosocial_behaviour_loss_z_strong")
+group_tab_socializing_prosocial_behaviour_loss_z_strong<- here_read("group_tab_socializing_prosocial_behaviour_loss_z_strong")
+group_tab_socializing_prosocial_behaviour_loss_z_strong
+plot_group_tab_socializing_prosocial_behaviour_loss_z_strong<- margot_plot(
+  group_tab_socializing_prosocial_behaviour_loss_z_strong,
+  type = "RD",
+  title = "Socialising effect on charity",
+  subtitle = ">= 1.4 Weekly Hours vs None",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+plot_group_tab_socializing_prosocial_behaviour_loss_z_strong
 
 
 
-## SD DATA
-# dat_sd_tranform <- readRDS(here::here(push_mods_dogs_gain, "dat_sd_tranform"))
+### Socialising and Warmth
+
+tab_warm_socialising_strong<- here_read("tab_warm_socialising_strong")
+group_tab_warm_warm_socialising_strong <- here_read("group_tab_warm_socialising_strong")
+tab_warm_socialising_strong
+group_tab_warm_warm_socialising_strong
+plot_warm_socialising_strong <- margot_plot(
+  group_tab_warm_warm_socialising_strong,
+  type = "RD",
+  title = "Socialing effect on prejudice/acceptance",
+  subtitle = ">= 1.4 weekly hours socialising vs none",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+plot_warm_socialising_strong
+
+ggsave(
+  plot_warm_socialising_strong,
+  path = here::here(here::here(push_mods, "figs")),
+  width = 8,
+  height = 6,
+  units = "in",
+  filename = "plot_warm_socialising_strong.png",
+  device = 'png',
+  limitsize = FALSE,
+  dpi = 600
+)
+
+## Socialising and Friends
 
 
-# comparative estimands
-# compare_cats_sleep <- readRDS(here::here(push_mods_cats_gain , "compare_cats_sleep"))
-# plot_group_tab_compare_cats_sleep <-readRDS(here::here(push_mods_cats_gain , "plot_group_tab_compare_cats_sleep"))
-# plot_group_tab_compare_cats_sleep
-# 
-# compare_dogs_excercise <- readRDS(here::here(push_mods_dogs_gain , "compare_dogs_excercise"))
-# plot_group_compare_dogs_excercise <-readRDS(here::here(push_mods_dogs_gain , "plot_group_compare_dogs_excercise"))
-# 
-# 
-# plot_group_tab_compare_cats_sleep <-readRDS(here::here(push_mods_cats_gain , "plot_group_tab_compare_cats_sleep"))
-# 
-# 
-# compare_dogs_excercise <- readRDS(here::here(push_mods_dogs_gain , "compare_dogs_excercise"))
-# plot_group_compare_dogs_excercise <-readRDS(here::here(push_mods_dogs_gain , "plot_group_compare_dogs_excercise"))
+
 
 ```
 
