--- a/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.qmd
+++ b/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.qmd
@@ -884,7 +884,7 @@ plot_warm_socialising_strong <- margot_plot(
   group_tab_warm_warm_socialising_strong,
   type = "RD",
   title = "Socialing effect on prejudice/acceptance",
-  subtitle = ">= 1.4 weekly hours socialising vs none",
+  subtitle = ">= 1.4 weekly hours socialising vs None",
   xlab = "",
   ylab = "",
   estimate_scale = 1,
@@ -902,21 +902,55 @@ plot_warm_socialising_strong <- margot_plot(
 
 plot_warm_socialising_strong
 
-ggsave(
-  plot_warm_socialising_strong,
-  path = here::here(here::here(push_mods, "figs")),
-  width = 8,
-  height = 6,
-  units = "in",
-  filename = "plot_warm_socialising_strong.png",
-  device = 'png',
-  limitsize = FALSE,
-  dpi = 600
-)
+# ggsave(
+#   plot_warm_socialising_strong,
+#   path = here::here(here::here(push_mods, "figs")),
+#   width = 8,
+#   height = 6,
+#   units = "in",
+#   filename = "plot_warm_socialising_strong.png",
+#   device = 'png',
+#   limitsize = FALSE,
+#   dpi = 600
+# )
 
 ## Socialising and Friends
 
+tab_socialising_help_received_strong <- here_read("tab_socialising_help_received_strong")
+group_tab_socialising_help_received_strong <- here_read("group_tab_socialising_help_received_strong")
 
+plot_help_time_strong <- margot_plot(
+  group_tab_socialising_help_received_strong,
+  type = "RR",
+  title = "Socialising effect on help recieved",
+  subtitle = ">= 1.4 weekly hours socialising vs None",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = 0,
+  x_lim_lo = 0,
+  x_lim_hi =  2
+)
+
+plot_help_time_strong
+# ggsave(
+#   plot_help_time_strong,
+#   path = here::here(here::here(push_mods, "figs")),
+#   width = 8,
+#   height = 6,
+#   units = "in",
+#   filename = "plot_help_time_strong.png",
+#   device = 'png',
+#   limitsize = FALSE,
+#   dpi = 600
+# )
 
 
 ```
